tests/src/frontend/syntax/invalid/unexpected_catch2.sk
fun main(): String {
  "" catch { Exception _ -> "" }
}
